yamls/customers-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: customers
  name: customers
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: customers
  serviceName: customers
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: customers
      name: customers
    spec:
      containers:
        - image: index.docker.io/korificf/customers:latest
          imagePullPolicy: Always
          name: customers
          ports:
            - containerPort: 8080
          resources:
            requests:
              ephemeral-storage: "0"
              memory: "0"
      imagePullSecrets:
        - name: index-docker-io-imagepullsecret
      restartPolicy: Always
      securityContext: {}
  updateStrategy: {}
status:
  availableReplicas: 0
  replicas: 0
