yamls/gateway-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: gateway
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: gateway
  serviceName: gateway
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: gateway
      name: gateway
    spec:
      containers:
        - env:
            - name: VCAP_SERVICES
              valueFrom:
                secretKeyRef:
                  key: VCAP_SERVICES
                  name: gateway-vcapasenv
            - name: VCAP_APPLICATION
              valueFrom:
                secretKeyRef:
                  key: VCAP_APPLICATION
                  name: gateway-vcapasenv
            - name: JBP_CONFIG_SPRING_AUTO_RECONFIGURATION
              value: '{ enabled: false }'
            - name: SPRING_PROFILES_ACTIVE
              value: dev
            - name: BLUEMIX_REGION
              value: region
            - name: SPRING_CONFIG_IMPORT
              value: /vcap/vcap-properties.yaml
          image: index.docker.io/korificf/gateway:latest
          imagePullPolicy: Always
          name: gateway
          ports:
            - containerPort: 8080
          resources:
            requests:
              ephemeral-storage: 1024M
              memory: 1024M
          volumeMounts:
            - mountPath: /vcap
              name: vcapsecretvolume
      imagePullSecrets:
        - name: index-docker-io-imagepullsecret
      restartPolicy: Always
      securityContext: {}
      volumes:
        - name: vcapsecretvolume
          secret:
            secretName: gateway-vcapasspringbootproperties
  updateStrategy: {}
status:
  availableReplicas: 0
  replicas: 0
