yamls/orders-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: orders
  name: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: orders
  serviceName: orders
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: orders
      name: orders
    spec:
      containers:
        - env:
            - name: CLOUD_OBJECT_STORAGE_0H_IAM_ROLE_CRN
              valueFrom:
                secretKeyRef:
                  key: CLOUD_OBJECT_STORAGE_0H_IAM_ROLE_CRN
                  name: orders-vcapasenv
            - name: VCAP_APPLICATION
              valueFrom:
                secretKeyRef:
                  key: VCAP_APPLICATION
                  name: orders-vcapasenv
            - name: BLUEMIX_REGION
              value: region
            - name: CLOUD_OBJECT_STORAGE_0H_RESOURCE_INSTANCE_ID
              valueFrom:
                secretKeyRef:
                  key: CLOUD_OBJECT_STORAGE_0H_RESOURCE_INSTANCE_ID
                  name: orders-vcapasenv
            - name: CLOUD_OBJECT_STORAGE_0H_IAM_APIKEY_NAME
              valueFrom:
                secretKeyRef:
                  key: CLOUD_OBJECT_STORAGE_0H_IAM_APIKEY_NAME
                  name: orders-vcapasenv
            - name: CLOUD_OBJECT_STORAGE_0H_IAM_APIKEY_DESCRIPTION
              valueFrom:
                secretKeyRef:
                  key: CLOUD_OBJECT_STORAGE_0H_IAM_APIKEY_DESCRIPTION
                  name: orders-vcapasenv
            - name: VCAP_SERVICES
              valueFrom:
                secretKeyRef:
                  key: VCAP_SERVICES
                  name: orders-vcapasenv
            - name: CLOUD_OBJECT_STORAGE_0H_IAM_SERVICEID_CRN
              valueFrom:
                secretKeyRef:
                  key: CLOUD_OBJECT_STORAGE_0H_IAM_SERVICEID_CRN
                  name: orders-vcapasenv
            - name: CLOUD_OBJECT_STORAGE_0H_APIKEY
              valueFrom:
                secretKeyRef:
                  key: CLOUD_OBJECT_STORAGE_0H_APIKEY
                  name: orders-vcapasenv
            - name: CLOUD_OBJECT_STORAGE_0H_ENDPOINTS
              valueFrom:
                secretKeyRef:
                  key: CLOUD_OBJECT_STORAGE_0H_ENDPOINTS
                  name: orders-vcapasenv
            - name: SPRING_CONFIG_IMPORT
              value: /vcap/vcap-properties.yaml
          image: index.docker.io/korificf/orders:latest
          imagePullPolicy: Always
          name: orders
          ports:
            - containerPort: 8080
          resources:
            requests:
              ephemeral-storage: 1024M
              memory: 1024M
          volumeMounts:
            - mountPath: /vcap
              name: vcapsecretvolume
      imagePullSecrets:
        - name: index-docker-io-imagepullsecret
      restartPolicy: Always
      securityContext: {}
      volumes:
        - name: vcapsecretvolume
          secret:
            secretName: orders-vcapasspringbootproperties
  updateStrategy: {}
status:
  availableReplicas: 0
  replicas: 0
